@@ -35,6 +35,7 @@ class PageCampaign : public AbstractPage
         QComboBox   *CBMission;
         QComboBox   *CBCampaign;
         QComboBox   *CBTeam;
+        bool currentMissionWon = false;
 
     protected:
         QLayout * bodyLayoutDefinition();
